      standardized mean difference (sm = "SMD")

  * Help pages:
    - examples corrected for dataset dietaryfat
    - do not run all examples in forest.netmeta() to shorten runtime
      of examples (requirement by CRAN: < 10s)
    - R code to produce forest plot added to examples in dataset
      Wood2010

 ** Internal changes **

  * netconnection():
    - argument checks added
    - better code documentation

  * Internal function decomp.tau():
    - detach all designs (including protuding edges)


*** netmeta, version 0.9-4, 2017-04-07 ***

 ** Bug fix release **

  * netsplit() used wrong comparison labels if argument
    'reference.group' was used in netmeta()

  * netmeasures() ignores value of argument 'reference.group' in
    netmeta object


*** netmeta, version 0.9-3, 2017-03-12 ***

 ** Major changes **

  * Calculate indirect treatment estimates based on direct evidence
    proportion

  * Ranking of treatments based on fixed effect model added to
    netrank()

  * New function netsplit() to split direct and indirect evidence

  * New functions netposet(), print.netposet(), and plot.netposet() to
    calculate, print and plot partial ordering of rankings

  * New function hasse() to draw Hasse diagram of partially ordered
    treatment rankings

  * netmeta():
    - can be used with R objects created with pairwise()
    - checks for consistency of treatment effects and variances in
      multi-arm studies

  * Import ginv() from R package MASS (for consistency checks)

  * Suggested packages added (for Hasse diagram):
    - hasseDiagram
    - grid

  * Bug fixes:
    - netmeta() calculates correct direct evidence estimates under
      random effects model (list components 'TE.direct.random',
      'seTE.direct.random', ..., 'pval.direct.random'); so far results
      from fixed effect model have been used
    - netmeta() excludes a treatment from list component 'seq' if all
      comparisons containing the respecitve treatment are excluded due to