@@ -36,12 +36,22 @@
 
  ** Internal changes **
 
+  * netmeta(): 
+    - new list element 'B.matrix' with the edge-vertex incidence
+      matrix
+
   * netconnection():
     - argument checks added
     - better code documentation
 
   * Internal function decomp.tau():
     - detach all designs (including protuding edges)
+
+  * New internal function createB() to calculate edge-vertex incidence
+    matrix
+
+  * netmeta(), netconnection(), multiarm(), and chkmultiarm():
+    - use internal function createB() instead of dedicated R code
 
 
 *** netmeta, version 0.9-4, 2017-04-07 ***
